# mekalacarR1

./: .gitignore  .gitmodules  README.md
.config/: QtProject.conf
docker/: Dockerfile.mekalacar  Dockerfile.mekalacar_slave  readme.txt
docker/scripts/: docker_build.sh  ros_entrypoint.sh
ros_ws/: roslan.bash
ros_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ros_ws/devel/include/arduino/: ArduinoMsg.h  rc.h
ros_ws/devel/include/zed_nodelets/: ZedConfig.h
ros_ws/devel/share/arduino/cmake/: arduino-msg-extras.cmake  arduino-msg-paths.cmake  arduinoConfig.cmake
ros_ws/devel/share/common/cmake/: commonConfig.cmake
ros_ws/devel/share/zed_nodelets/cmake/: zed_nodeletsConfig.cmake
ros_ws/src/arduino/: CMakeLists.txt  package.xml
ros_ws/src/arduino/config/: arduino_config.yaml
ros_ws/src/arduino/ino/: readme.txt
ros_ws/src/arduino/launch/: arduino.launch
ros_ws/src/arduino/msg/: ArduinoMsg.msg  rc.msg
ros_ws/src/arduino/scripts/: arduino_node.py
ros_ws/src/common/: CMakeLists.txt  package.xml  setup.py
ros_ws/src/description/: CMakeLists.txt  mekalacar_description.xacro  package.xml
ros_ws/src/description/config/: joint_names_description.yaml
ros_ws/src/description/launch/: display.launch
ros_ws/src/description/meshes/: base_link.STL  camera.STL  steering_f_l.STL  steering_f_r.STL  tire_f_l.STL  tire_f_r.STL  tire_r_l.STL  tire_r_r.STL
ros_ws/src/description/scripts/: joint_state_publisher.py
ros_ws/src/description/urdf/: description.csv  description.urdf
ros_ws/src/mekalacar_launch/: CMakeLists.txt  package.xml
ros_ws/src/mekalacar_launch/launch/: drive.launch  slave.launch
ros_ws/src/mekalacar_launch/rviz/: drive.rviz
ros_ws/src/navigation/config/: common_costmap.yaml  dwa_planner.yaml
ros_ws/src/navigation/launch/: move_base.launch
(+21 files in other folders)
